--- a/index.html
+++ b/index.html
@@ -915,7 +915,7 @@
         </div>
       </section>
       <footer class="d-flex text-light">
-         <span class="mr-1">Website by <a href="https://www.dairyperformancenetwork.com/" target="_blank"><img decoding="async" src="assets/logo_dpn.png" style="width:50px"></a></span>
+         <span class="mr-1">Website by <a href="https://www.dairyperformancenetwork.com/" target="_blank"><img alt="logo dpn" decoding="async" src="assets/logo_dpn.png" style="width:50px"></a></span>
       </footer>
     </div>
 
