Removed unnecessary id and class in index

--- a/index.html
+++ b/index.html
@@ -29,18 +29,16 @@
 
     <title>ReGeneration</title>
   </head>
-  
+
   <body class="scroll-y-none">
     <span class="d-none" id="span_icon">
       <a href="#">
-        <img src="assets/crown_logo.png" alt="logo floating" class="" />
+        <img src="assets/crown_logo.png" alt="logo floating"/>
       </a>
     </span>
 
-    <div
-      class="container-full d-flex justify-content-center text-center bg-blue"
-    >
-      <section class="h-100 p-0" id="section_hero">
+    <div class="container-full d-flex justify-content-center text-center bg-blue">
+      <section class="h-100 p-0">
         <div class="h-100 w-100 bg-dark hero" id="intro_logo">
           <img
             src="assets/crown_logo_white.png"
