Unnecessary section ids and classes

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         data-aos-anchor-placement="center-bottom"
       />
 
-      <section class="" id="section_we_are">
+      <section>
         <div class="container-grid-rows justify-items-center">
           <div
             class="d-flex align-items-center"
@@ -188,7 +188,7 @@
         data-aos-anchor-placement="center-bottom"
       />
 
-      <section class="justify-items-center" id="section_carbon">
+      <section class="justify-items-center">
         <div class="d-flex align-items-center">
           <h2
             class="subtitle"
@@ -262,7 +262,7 @@
         data-aos-anchor-placement="center-bottom"
       />
 
-      <section class="py-1 section_parallax" id="section_bun">
+      <section class="py-1 section_parallax">
          <div
            class="d-flex align-items-center element_parallax"
 
@@ -356,14 +356,14 @@
        </section>
 
       <hr
-        class="separator snap-section"
+        class="separator"
         data-aos="slide-down"
         data-aos-duration="5200"
         data-aos-easing="ease-in-out-back"
         data-aos-anchor-placement="center-bottom"
       />
 
-      <section class="snap-section" id="section_how_it_works">
+      <section>
         <div class="d-flex align-items-center">
           <div
             class="img-container-25 border-circle border-md"
@@ -453,7 +453,7 @@
       </section>
 
 
-      <section class="text-light" id="section_royal_family">
+      <section class="text-light">
         <hr
           class="separator"
           data-aos="slide-down"
@@ -496,7 +496,7 @@
         data-aos-anchor-placement="center-bottom"
       />
 
-      <section class="text-light" id="section_arena">
+      <section class="text-light">
         <div class="container-grid-rows justify-content-center">
           <h1
             class="title"
@@ -531,7 +531,7 @@
         data-aos-anchor-placement="center-bottom"
       />
 
-      <section class="text-light" id="section_partners">
+      <section class="text-light">
         <div class="">
           <img
             src="assets/logo-complete.png"
@@ -675,7 +675,7 @@
         data-aos-anchor-placement="center-bottom"
       />
 
-      <section class="text-light" id="section_follow">
+      <section class="text-light">
         <div class="">
           <h1
             class="title"
@@ -733,7 +733,7 @@
         data-aos-anchor-placement="center-bottom"
       />
 
-      <section class="text-light" id="section_urban_rural">
+      <section class="text-light">
         <div class="d-flex align-items-center">
           <div
             class="img-container-25 border-circle border-xl"
