Was this supposed to be there?

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
               alt="logo-regeneration"
               class="img-75"
             />
-            <p>
+            <p class="">
               The generation determined to learn from their roots and create
               lasting change to restore our world.
             </p>
