Changed data to js

--- a/index.html
+++ b/index.html
@@ -74,13 +74,7 @@
 
       <section>
         <div class="container-grid-rows justify-items-center">
-          <div
-            class="d-flex align-items-center"
-            data-aos="fade-up"
-            data-aos-duration="1000"
-            data-aos-easing="ease-in-out-back"
-            data-aos-anchor-placement="center-bottom"
-          >
+          <div class="d-flex align-items-center animate-heading">
             <img
               src="assets/logo-complete.png"
               alt="logo-regeneration"
@@ -93,42 +87,19 @@
           </div>
 
           <div>
-            <h1
-              class="title"
-              data-aos="fade-up"
-              data-aos-duration="1000"
-              data-aos-easing="ease-in-out-back"
-              data-aos-anchor-placement="center-bottom"
-            >
+            <h1 class="title animate-heading">
               WE'RE NOT GEN Y
-            </>
-            <h1
-              class="title"
-              data-aos="fade-up"
-              data-aos-duration="1000"
-              data-aos-easing="ease-in-out-back"
-              data-aos-anchor-placement="center-bottom"
-            >
+            </hi>
+            <h1 class="title animate-heading">
               WE'RE NOT GEN Z
             </h1>
           </div>
 
           <div class="d-flex align-items-center">
-            <h1
-              class="title text-light"
-              data-aos="fade-up"
-              data-aos-duration="1000"
-              data-aos-easing="ease-in-out-back"
-              data-aos-anchor-placement="center-bottom"
-            >
+            <h1 class="title text-light animate-heading">
               WE ARE THE [RE]GENERATION
             </h1>
-            <p
-              data-aos="fade-up"
-              data-aos-duration="1000"
-              data-aos-easing="ease-in-out-back"
-              data-aos-anchor-placement="center-bottom"
-            >
+            <p class="animate-heading">
               Royal Family Farming wants to bring a new community together to
               uplift and reinvigorate through connections with ourselves, each
               other, and our earth.
@@ -137,43 +108,21 @@
                <img
                  src="assets/join-us.PNG"
                  alt="img join us"
-                 class="img-75"
-                 data-aos="fade-up"
-                 data-aos-duration="1000"
-                 data-aos-easing="ease-in-out-back"
-                 data-aos-anchor-placement="center-bottom"
-               />
+                 class="img-75 animate-heading"/>
             </a>
-            <p
-              data-aos="fade-up"
-              data-aos-duration="1000"
-              data-aos-easing="ease-in-out-back"
-              data-aos-anchor-placement="center-bottom"
-            >
+            <p class="animate-heading">
               for workshops, social media chats, and more. We want to
               collaborate on how to create change in our world, a world that
               needs more than to be sustained, it needs to be healed.
             </p>
-            <div
-              class="d-flex img-container-25 border-circle border-md mx-auto"
-              data-aos="fade-up"
-              data-aos-duration="1000"
-              data-aos-easing="ease-in-out-back"
-              data-aos-anchor-placement="center-bottom"
-            >
+            <div class="d-flex img-container-25 border-circle border-md mx-auto animate-heading">
               <img
                 src="assets/Austin_kids.jpg"
                 alt="img cowboys family"
                 class="img-responsive"
               />
             </div>
-            <h1
-              class="title"
-              data-aos="fade-up"
-              data-aos-duration="1000"
-              data-aos-easing="ease-in-out-back"
-              data-aos-anchor-placement="center-bottom"
-            >
+            <h1 class="title animate-heading">
               LET’S DO THIS TOGETHER!
             </h1>
           </div>
@@ -190,61 +139,28 @@
 
       <section class="justify-items-center">
         <div class="d-flex align-items-center">
-          <h2
-            class="subtitle"
-            data-aos="fade-up"
-            data-aos-duration="1000"
-            data-aos-easing="ease-in-out-back"
-            data-aos-anchor-placement="center-bottom"
-          >
+          <h2 class="subtitle animate-heading">
             Construction of your
           </h2>
-          <h1
-            class="title"
-            data-aos="fade-up"
-            data-aos-duration="1000"
-            data-aos-easing="ease-in-out-back"
-            data-aos-anchor-placement="center-bottom"
-          >
+          <h1 class="title">
             CARBON NATURAL
           </h1>
           <img
             src="assets/molly-burgers.png"
             alt="logo molly burguers"
-            class="img-75 py-1"
-            data-aos="fade-up"
-            data-aos-duration="1000"
-            data-aos-easing="ease-in-out-back"
-            data-aos-anchor-placement="center-bottom"
-          />
+            class="img-75 py-1 animate-heading"/>
           <h1
-            class="title"
-            data-aos="fade-up"
-            data-aos-duration="1000"
-            data-aos-easing="ease-in-out-back"
-            data-aos-anchor-placement="center-bottom"
-          >
+            class="title animate-heading">
             INTRO:
           </h1>
-          <p
-            data-aos="fade-up"
-            data-aos-duration="1000"
-            data-aos-easing="ease-in-out-back"
-            data-aos-anchor-placement="center-bottom"
-          >
+          <p class="animate-heading">
             A top-notch burger starts with simple ingredients, and they’re even
             better when they’re local and sustainable. With beef (and milk!)
             sourced from Royal Family Farming in Royal City, WA. Regenerative
             farming is better for the farmers, the cows, the land, and the
             community.
           </p>
-          <div
-            class="d-flex img-container-25 border-circle border-md mx-auto"
-            data-aos="fade-up"
-            data-aos-duration="1000"
-            data-aos-easing="ease-in-out-back"
-            data-aos-anchor-placement="center-bottom"
-          >
+          <div class="d-flex img-container-25 border-circle border-md mx-auto animate-heading">
             <img
               src="assets/1-person.png"
               alt="img cowboys family"
@@ -365,43 +281,20 @@
 
       <section>
         <div class="d-flex align-items-center">
-          <div
-            class="img-container-25 border-circle border-md"
-            data-aos="fade-up"
-            data-aos-duration="1000"
-            data-aos-easing="ease-in-out-back"
-            data-aos-anchor-placement="center-bottom"
-          >
+          <div class="img-container-25 border-circle border-md animate-heading">
             <img
               src="assets/steer.jpg"
               alt="img cow steer"
               class="img-responsive"
             />
           </div>
-          <h1
-            class="title"
-            data-aos="fade-up"
-            data-aos-duration="1000"
-            data-aos-easing="ease-in-out-back"
-            data-aos-anchor-placement="center-bottom"
-          >
+          <h1 class="title animate-heading">
             HOW IT WORKS
           </h1>
-          <h2
-            class="subtitle"
-            data-aos="fade-up"
-            data-aos-duration="1000"
-            data-aos-easing="ease-in-out-back"
-            data-aos-anchor-placement="center-bottom"
-          >
+          <h2 class="subtitle animate-heading">
             Cows close the carbon cycle
           </h2>
-          <p
-            data-aos="fade-up"
-            data-aos-duration="1000"
-            data-aos-easing="ease-in-out-back"
-            data-aos-anchor-placement="center-bottom"
-          >
+          <p class="animate-heading">
             Cows are nature’s recyclers. Everything they eat contributes to a
             regenerative system. They have four compartments in their stomachs
             that convert soil-benefiting feed and food waste into nutrient-rich
@@ -425,13 +318,7 @@
     >
       <section class="text-light px-auto mx-none" id="section_into_soil">
         <div class="d-flex align-items-center div_section_into_soil">
-          <h1
-            class=""
-            data-aos="fade-up"
-            data-aos-duration="1000"
-            data-aos-easing="ease-in-out-back"
-            data-aos-anchor-placement="center-bottom"
-          >
+          <h1 class="animate-heading">
             CARBON OUT <br />
             OF THE <br />
             AIR
@@ -441,12 +328,7 @@
           </div>
 
           <h1
-            class="mt-2 p-bottom"
-            data-aos="fade-up"
-            data-aos-duration="1000"
-            data-aos-easing="ease-in-out-back"
-            data-aos-anchor-placement="center-bottom"
-          >
+            class="mt-2 p-bottom animate-heading">
             INTO THE SOIL
           </h1>
         </div>
@@ -463,12 +345,7 @@
         />
         <div class="d-flex align-items-center">
           <h1
-            class="title"
-            data-aos="fade-up"
-            data-aos-duration="1000"
-            data-aos-easing="ease-in-out-back"
-            data-aos-anchor-placement="center-bottom"
-          >
+            class="title animate-heading">
             FROM<br />
             ROYAL FAMILY FARM
           </h1>
@@ -478,12 +355,7 @@
               alt="video"
               loop
               controls
-              class="img-responsive"
-              data-aos="fade-up"
-              data-aos-duration="1000"
-              data-aos-easing="ease-in-out-back"
-              data-aos-anchor-placement="center-bottom"
-            />
+              class="img-responsive animate-heading">
           </div>
         </div>
       </section>
@@ -499,21 +371,11 @@
       <section class="text-light">
         <div class="container-grid-rows justify-content-center">
           <h1
-            class="title"
-            data-aos="fade-up"
-            data-aos-duration="1000"
-            data-aos-easing="ease-in-out-back"
-            data-aos-anchor-placement="center-bottom"
-          >
+            class="title animate-heading">
             TO THE ARENA
           </h1>
           <div
-            class="img-container-35 border-circle border-md"
-            data-aos="fade-up"
-            data-aos-duration="1000"
-            data-aos-easing="ease-in-out-back"
-            data-aos-anchor-placement="center-bottom"
-          >
+            class="img-container-35 border-circle border-md animate-heading">
             <img
               src="assets/CPA_Blue_NWCityArenaLight_DronePhoto2022.jpg"
               alt="img arena city"
@@ -536,29 +398,13 @@
           <img
             src="assets/logo-complete.png"
             alt="logo-regeneration"
-            class="img-75"
-            data-aos="fade-up"
-            data-aos-duration="1000"
-            data-aos-easing="ease-in-out-back"
-            data-aos-anchor-placement="center-bottom"
-          />
+            class="img-75 animate-heading"/>
           <h1
-            class="title"
-            data-aos="fade-up"
-            data-aos-duration="1000"
-            data-aos-easing="ease-in-out-back"
-            data-aos-anchor-placement="center-bottom"
-          >
+            class="title animate-heading">
             PARTNERS
           </h1>
           <div class="container-grid justify-items-center" id="grid_partners">
-            <div
-              class=""
-              data-aos="fade-up"
-              data-aos-duration="1000"
-              data-aos-easing="ease-in-out-back"
-              data-aos-anchor-placement="center-bottom"
-            >
+            <div class="animate-heading">
               <img
                 src="assets/partner-darigold.png"
                 alt="logo partner darigold"
@@ -566,13 +412,7 @@
               />
             </div>
 
-            <div
-              class=""
-              data-aos="fade-up"
-              data-aos-duration="1000"
-              data-aos-easing="ease-in-out-back"
-              data-aos-anchor-placement="center-bottom"
-            >
+            <div class="animate-heading">
               <img
                 src="assets/partner-CMIorchards.png"
                 alt="logo partner CMIorchards"
@@ -580,13 +420,7 @@
               />
             </div>
 
-            <div
-              class=""
-              data-aos="fade-up"
-              data-aos-duration="1000"
-              data-aos-easing="ease-in-out-back"
-              data-aos-anchor-placement="center-bottom"
-            >
+            <div class="animate-heading">
               <img
                 src="assets/partner-macDonaldMeat.png"
                 alt="logo partner macDonaldMeat"
@@ -594,13 +428,7 @@
               />
             </div>
 
-            <div
-              class=""
-              data-aos="fade-up"
-              data-aos-duration="1000"
-              data-aos-easing="ease-in-out-back"
-              data-aos-anchor-placement="center-bottom"
-            >
+            <div class="animate-heading">
               <img
                 src="assets/partner-UA.png"
                 alt="logo partner UA"
@@ -608,13 +436,7 @@
               />
             </div>
 
-            <div
-              class=""
-              data-aos="fade-up"
-              data-aos-duration="1000"
-              data-aos-easing="ease-in-out-back"
-              data-aos-anchor-placement="center-bottom"
-            >
+            <div class="animate-heading">
               <img
                 src="assets/partner-BEEF.png"
                 alt="logo partner BEEF"
@@ -622,13 +444,7 @@
               />
             </div>
 
-            <div
-              class=""
-              data-aos="fade-up"
-              data-aos-duration="1000"
-              data-aos-easing="ease-in-out-back"
-              data-aos-anchor-placement="center-bottom"
-            >
+            <div class="animate-heading">
               <img
                 src="assets/partner-DAIRY.png"
                 alt="logo partner DAIRY"
@@ -636,13 +452,7 @@
               />
             </div>
 
-            <div
-              class=""
-              data-aos="fade-up"
-              data-aos-duration="1000"
-              data-aos-easing="ease-in-out-back"
-              data-aos-anchor-placement="center-bottom"
-            >
+            <div class="animate-heading">
               <img
                 src="assets/partner-honey.png"
                 alt="logo partner HONEY"
@@ -650,13 +460,7 @@
               />
             </div>
 
-            <div
-              class=""
-              data-aos="fade-up"
-              data-aos-duration="1000"
-              data-aos-easing="ease-in-out-back"
-              data-aos-anchor-placement="center-bottom"
-            >
+            <div class="animate-heading">
               <img
                 src="assets/partner-nurst.png"
                 alt="logo partner nurts"
@@ -677,20 +481,10 @@
 
       <section class="text-light">
         <div class="">
-          <h1
-            class="title"
-            data-aos="fade-up"
-            data-aos-duration="1000"
-            data-aos-easing="ease-in-out-back"
-            data-aos-anchor-placement="center-bottom"
-          >
+          <h1 class="title animate-heading">
             FOLLOW US!
           </h1>
-          <a href="https://www.instagram.com/royalfamilyfarming/" target="_blank" class="box box_instagram mr-1"
-              data-aos="fade-up"
-              data-aos-duration="1000"
-              data-aos-easing="ease-in-out-back"
-              data-aos-anchor-placement="center-bottom">
+          <a href="https://www.instagram.com/royalfamilyfarming/" target="_blank" class="box box_instagram mr-1">
                <i class="fa-brands fa-instagram fa-lg"></i>
           </a>
           <a href="https://www.facebook.com/royalfamilyfarming/" target="_blank" data-aos="fade-up" class="box box_facebook ml-1"
@@ -735,35 +529,18 @@
 
       <section class="text-light">
         <div class="d-flex align-items-center">
-          <div
-            class="img-container-25 border-circle border-xl"
-            data-aos="fade-up"
-            data-aos-duration="1000"
-            data-aos-easing="ease-in-out-back"
-            data-aos-anchor-placement="center-bottom"
-          >
+          <div class="img-container-25 border-circle border-xl animate-heading">
             <img
               src="assets/austin molly door.jpg"
               alt="img austin molly hourse"
               class="img-responsive"
             />
           </div>
-          <h1
-            class="title"
-            data-aos="fade-up"
-            data-aos-duration="1000"
-            data-aos-easing="ease-in-out-back"
-            data-aos-anchor-placement="center-bottom"
-          >
+          <h1 class="title animate-heading">
             URBAN AND RURAL<br />
             WORKING TOGETHER
           </h1>
-          <p
-            data-aos="fade-up"
-            data-aos-duration="1000"
-            data-aos-easing="ease-in-out-back"
-            data-aos-anchor-placement="center-bottom"
-          >
+          <p class="animate-heading">
             This is what happens when you combine an innovative family farm with
             the ability to absorb and store thousands of tons of carbon with an
             accomplished Seattle chef focused on making tasty, nourishing, and
@@ -775,24 +552,10 @@
           <img
             src="assets/main-logo.png"
             alt="logo royal"
-            class="img-3 border-circle border"
-            data-aos="fade-up"
-            data-aos-duration="1000"
-            data-aos-easing="ease-in-out-back"
-            data-aos-anchor-placement="center-bottom"
-          />
+            class="img-3 border-circle border animate-heading"/>
           <br />
-          <div
-            data-aos="fade-up"
-            data-aos-duration="1000"
-            data-aos-easing="ease-in-out-back"
-            data-aos-anchor-placement="center-bottom"
-          >
-             <a href="https://www.instagram.com/royalfamilyfarming/" target="_blank" class="box box_instagram mr-1"
-                 data-aos="fade-up"
-                 data-aos-duration="1000"
-                 data-aos-easing="ease-in-out-back"
-                 data-aos-anchor-placement="center-bottom">
+          <div class="animate-heading">
+             <a href="https://www.instagram.com/royalfamilyfarming/" target="_blank" class="box box_instagram mr-1 animate-heading">
                   <i class="fa-brands fa-instagram fa-lg"></i>
              </a>
              <a href="https://www.facebook.com/royalfamilyfarming/" target="_blank" data-aos="fade-up" class="box box_facebook ml-1"
