Changed hamburger images to webp

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
          >
            <img
              id="img_hamburger_1"
-             src="assets/hamburgers/Hamburger-1.png"
+             src="assets/hamburgers/Hamburger-1.webp"
              alt="img hamburger-1"
              class="img-5 img_parallax"
            />
@@ -203,7 +203,7 @@
 
          >
            <img
-             src="assets/hamburgers/Hamburger-2.png"
+             src="assets/hamburgers/Hamburger-2.webp"
              alt="img hamburger-2"
              class="img-5"
            />
@@ -223,7 +223,7 @@
 
          >
            <img
-             src="assets/hamburgers/Hamburger-3.png"
+             src="assets/hamburgers/Hamburger-3.webp"
              alt="img hamburger-3"
              class="img-5"
            />
@@ -241,7 +241,7 @@
 
          >
            <img
-             src="assets/hamburgers/Hamburger-4.png"
+             src="assets/hamburgers/Hamburger-4.webp"
              alt="img hamburger-4"
              class="img-5"
            />
@@ -256,7 +256,7 @@
 
          <div class="d-flex align-items-center element_parallax">
            <img
-             src="assets/hamburgers/Hamburger-5.png"
+             src="assets/hamburgers/Hamburger-5.webp"
              alt="img hamburger-5"
              class="img-5"
            />
