--- a/index.html
+++ b/index.html
@@ -499,22 +499,22 @@
             data-aos-duration="1000"
             data-aos-easing="ease-in-out-back"
           >
-            <img src="assets/follows/follow-4.png" alt="img follow 4" class="img-100">
-            <img src="assets/follows/follow-9.jpg" alt="img follow 9" class="img-100">
-            <img src="assets/follows/follow-5.png" alt="img follow 5" class="img-100">
-            <img src="assets/follows/follow-10.jpeg" alt="img follow 10" class="img-100">
+            <img src="assets/follows/follow-4.webp" alt="img follow 4" class="img-100">
+            <img src="assets/follows/follow-9.webp" alt="img follow 9" class="img-100">
+            <img src="assets/follows/follow-5.webp" alt="img follow 5" class="img-100">
+            <img src="assets/follows/follow-10.webp" alt="img follow 10" class="img-100">
 
-            <img src="assets/follows/follow-11.JPG" alt="img follow 11" class="img-100">
-            <img src="assets/follows/follow-12.jpeg" alt="img follow 12" class="img-100">
-            <img src="assets/follows/follow-15.jpeg" alt="img follow 15" class="img-100">
-            <img src="assets/follows/follow-14.jpeg" alt="img follow 14" class="img-100">
+            <img src="assets/follows/follow-11.webp" alt="img follow 11" class="img-100">
+            <img src="assets/follows/follow-12.webp" alt="img follow 12" class="img-100">
+            <img src="assets/follows/follow-15.webp" alt="img follow 15" class="img-100">
+            <img src="assets/follows/follow-14.webp" alt="img follow 14" class="img-100">
 
-            <img src="assets/follows/follow-22.png" alt="img follow 22" class="img-100">
-            <img src="assets/follows/follow-17.jpg" alt="img follow 17" class="img-100">
-            <img src="assets/follows/follow-21.png" alt="img follow 21" class="img-100">
-            <img src="assets/follows/follow-18.jpeg" alt="img follow 18" class="img-100">
+            <img src="assets/follows/follow-22.webp" alt="img follow 22" class="img-100">
+            <img src="assets/follows/follow-17.webp" alt="img follow 17" class="img-100">
+            <img src="assets/follows/follow-21.webp" alt="img follow 21" class="img-100">
+            <img src="assets/follows/follow-18.webp" alt="img follow 18" class="img-100">
 
-            <img src="assets/follows/follow-20.jpeg" alt="img follow 20" class="img-100">
+            <img src="assets/follows/follow-20.webp" alt="img follow 20" class="img-100">
           </div>
         </div>
       </section>
