--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     uplift and reinvigorate through connections with ourselves, each
     other, and our earth."/>
 
-    <link rel="shortcut icon" href="assets/crown_logo_white.png" id="favicon" />
+    <link rel="shortcut icon" href="assets/crown_logo_white.webp" id="favicon" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&amp;display=swap"
       rel="stylesheet"
@@ -33,7 +33,7 @@
   <body class="scroll-y-none">
     <span class="d-none" id="span_icon">
       <a href="#">
-        <img src="assets/crown_logo.png" alt="logo floating"/>
+        <img src="assets/crown_logo.webp" alt="logo floating"/>
       </a>
     </span>
 
@@ -41,7 +41,7 @@
       <section class="h-100 p-0">
         <div class="h-100 w-100 bg-dark hero" id="intro_logo">
           <img
-            src="assets/crown_logo_white.png"
+            src="assets/crown_logo_white.webp"
             class="img-sm"
             alt="logo RE"
             id="logo_intro"
@@ -49,14 +49,14 @@
         </div>
         <div class="p-relative d-flex justify-content-center" id="hero">
           <img
-            src="assets/main-logo.png"
+            src="assets/main-logo.webp"
             alt="main-logo-royal"
             class="img-hero"
             id="img_hero_1"
           />
-          <img src="assets/arroba-clara.png" alt="arroba" class="img-sm" />
+          <img src="assets/arroba-clara.webp" alt="arroba" class="img-sm" />
           <img
-            src="assets/logotipo.png"
+            src="assets/logotipo.webp"
             alt="logotipo-molly-burguers"
             class="img-hero"
             id="img_hero_2"
@@ -76,7 +76,7 @@
         <div class="container-grid-rows justify-items-center">
           <div class="d-flex align-items-center animate-heading">
             <img
-              src="assets/logo-complete.png"
+              src="assets/logo-complete.webp"
               alt="logo-regeneration"
               class="img-75"
             />
@@ -106,7 +106,7 @@
             </p>
             <a href="https://subscribepage.io/jointheregeneration" target="_blank">
                <img
-                 src="assets/join-us.PNG"
+                 src="assets/join-us.webp"
                  alt="img join us"
                  class="img-75 animate-heading"/>
             </a>
@@ -117,7 +117,7 @@
             </p>
             <div class="d-flex img-container-25 border-circle border-md mx-auto animate-heading">
               <img
-                src="assets/Austin_kids.jpg"
+                src="assets/Austin_kids.webp"
                 alt="img cowboys family"
                 class="img-responsive"
               />
@@ -146,7 +146,7 @@
             CARBON NATURAL
           </h1>
           <img
-            src="assets/molly-burgers.png"
+            src="assets/molly-burgers.webp"
             alt="logo molly burguers"
             class="img-75 py-1 animate-heading"/>
           <h1
@@ -162,7 +162,7 @@
           </p>
           <div class="d-flex img-container-25 border-circle border-md mx-auto animate-heading">
             <img
-              src="assets/1-person.png"
+              src="assets/1-person.webp"
               alt="img cowboys family"
               class="img-responsive"
             />
@@ -377,7 +377,7 @@
           <div
             class="img-container-35 border-circle border-md animate-heading">
             <img
-              src="assets/CPA_Blue_NWCityArenaLight_DronePhoto2022.jpg"
+              src="assets/CPA_Blue_NWCityArenaLight_DronePhoto2022.webp"
               alt="img arena city"
               class="img-responsive"
             />
@@ -396,7 +396,7 @@
       <section class="text-light">
         <div class="">
           <img
-            src="assets/logo-complete.png"
+            src="assets/logo-complete.webp"
             alt="logo-regeneration"
             class="img-75 animate-heading"/>
           <h1
@@ -406,7 +406,7 @@
           <div class="container-grid justify-items-center" id="grid_partners">
             <div class="animate-heading">
               <img
-                src="assets/partner-darigold.png"
+                src="assets/partner-darigold.webp"
                 alt="logo partner darigold"
                 class="img-responsive p-1"
               />
@@ -414,7 +414,7 @@
 
             <div class="animate-heading">
               <img
-                src="assets/partner-CMIorchards.png"
+                src="assets/partner-CMIorchards.webp"
                 alt="logo partner CMIorchards"
                 class="img-responsive p-1"
               />
@@ -422,7 +422,7 @@
 
             <div class="animate-heading">
               <img
-                src="assets/partner-macDonaldMeat.png"
+                src="assets/partner-macDonaldMeat.webp"
                 alt="logo partner macDonaldMeat"
                 class="img-responsive p-1"
               />
@@ -430,7 +430,7 @@
 
             <div class="animate-heading">
               <img
-                src="assets/partner-UA.png"
+                src="assets/partner-UA.webp"
                 alt="logo partner UA"
                 class="img-responsive p-1"
               />
@@ -438,7 +438,7 @@
 
             <div class="animate-heading">
               <img
-                src="assets/partner-BEEF.png"
+                src="assets/partner-BEEF.webp"
                 alt="logo partner BEEF"
                 class="img-responsive p-1"
               />
@@ -446,7 +446,7 @@
 
             <div class="animate-heading">
               <img
-                src="assets/partner-DAIRY.png"
+                src="assets/partner-DAIRY.webp"
                 alt="logo partner DAIRY"
                 class="img-responsive p-1"
               />
@@ -454,7 +454,7 @@
 
             <div class="animate-heading">
               <img
-                src="assets/partner-honey.png"
+                src="assets/partner-honey.webp"
                 alt="logo partner HONEY"
                 class="img-responsive p-1"
               />
@@ -462,7 +462,7 @@
 
             <div class="animate-heading">
               <img
-                src="assets/partner-nurst.png"
+                src="assets/partner-nurst.webp"
                 alt="logo partner nurts"
                 class="img-responsive p-1"
               />
@@ -531,7 +531,7 @@
         <div class="d-flex align-items-center">
           <div class="img-container-25 border-circle border-xl animate-heading">
             <img
-              src="assets/austin molly door.jpg"
+              src="assets/austin molly door.webp"
               alt="img austin molly hourse"
               class="img-responsive"
             />
@@ -550,7 +550,7 @@
             Together, we can change the world.
           </p>
           <img
-            src="assets/main-logo.png"
+            src="assets/main-logo.webp"
             alt="logo royal"
             class="img-3 border-circle border animate-heading"/>
           <br />
@@ -568,7 +568,7 @@
         </div>
       </section>
       <footer class="d-flex text-light">
-         <span class="mr-1">Website by <a href="https://www.dairyperformancenetwork.com/" target="_blank"><img alt="logo dpn" decoding="async" src="assets/logo_dpn.png" style="width:50px"></a></span>
+         <span class="mr-1">Website by <a href="https://www.dairyperformancenetwork.com/" target="_blank"><img alt="logo dpn" decoding="async" src="assets/logo_dpn.webp" style="width:50px"></a></span>
       </footer>
     </div>
 
