--- a/index.html
+++ b/index.html
@@ -66,10 +66,6 @@
 
       <hr
         class="separator"
-        data-aos="slide-down"
-        data-aos-duration="5200"
-        data-aos-easing="ease-in-out-back"
-        data-aos-anchor-placement="center-bottom"
       />
 
       <section>
@@ -131,10 +127,6 @@
 
       <hr
         class="separator"
-        data-aos="slide-down"
-        data-aos-duration="5200"
-        data-aos-easing="ease-in-out-back"
-        data-aos-anchor-placement="center-bottom"
       />
 
       <section class="justify-items-center">
@@ -172,10 +164,6 @@
 
       <hr
         class="separator"
-        data-aos="slide-down"
-        data-aos-duration="5200"
-        data-aos-easing="ease-in-out-back"
-        data-aos-anchor-placement="center-bottom"
       />
 
       <section class="py-1 section_parallax">
@@ -273,10 +261,6 @@
 
       <hr
         class="separator"
-        data-aos="slide-down"
-        data-aos-duration="5200"
-        data-aos-easing="ease-in-out-back"
-        data-aos-anchor-placement="center-bottom"
       />
 
       <section>
@@ -305,19 +289,13 @@
         </div>
       </section>
 
-      <hr
-        class="separator"
-        data-aos="slide-down"
-        data-aos-duration="5200"
-        data-aos-easing="ease-in-out-back"
-        data-aos-anchor-placement="center-bottom"
-      />
+      <hr class="separator"/>
     </div>
     <div
       class="container-full d-flex justify-content-center text-center bg-blue-brown"
     >
       <section class="text-light px-auto mx-none" id="section_into_soil">
-        <div class="d-flex align-items-center div_section_into_soil">
+        <div class="d-flex align-items-center">
           <h1 class="animate-heading">
             CARBON OUT <br />
             OF THE <br />
@@ -338,10 +316,6 @@
       <section class="text-light">
         <hr
           class="separator"
-          data-aos="slide-down"
-          data-aos-duration="5200"
-          data-aos-easing="ease-in-out-back"
-          data-aos-anchor-placement="center-bottom"
         />
         <div class="d-flex align-items-center">
           <h1
@@ -362,10 +336,6 @@
 
       <hr
         class="separator"
-        data-aos="slide-down"
-        data-aos-duration="5200"
-        data-aos-easing="ease-in-out-back"
-        data-aos-anchor-placement="center-bottom"
       />
 
       <section class="text-light">
@@ -387,10 +357,6 @@
 
       <hr
         class="separator"
-        data-aos="slide-down"
-        data-aos-duration="5200"
-        data-aos-easing="ease-in-out-back"
-        data-aos-anchor-placement="center-bottom"
       />
 
       <section class="text-light">
@@ -473,10 +439,6 @@
 
       <hr
         class="separator"
-        data-aos="slide-down"
-        data-aos-duration="5200"
-        data-aos-easing="ease-in-out-back"
-        data-aos-anchor-placement="center-bottom"
       />
 
       <section class="text-light">
@@ -521,10 +483,6 @@
 
       <hr
         class="separator"
-        data-aos="slide-down"
-        data-aos-duration="5200"
-        data-aos-easing="ease-in-out-back"
-        data-aos-anchor-placement="center-bottom"
       />
 
       <section class="text-light">
