--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     uplift and reinvigorate through connections with ourselves, each
     other, and our earth."/>
 
-    <link rel="shortcut icon" href="assets/crown_logo_white.webp" id="favicon" />
+    <link rel="shortcut icon" href="assets/crown_logo_white.webp" id="favicon"loading="lazy" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&amp;display=swap"
       rel="stylesheet preconnect"
@@ -33,7 +33,7 @@
   <body class="scroll-y-none">
     <span class="d-none" id="span_icon">
       <a href="#">
-        <img src="assets/crown_logo.webp" alt="logo floating"/>
+        <img src="assets/crown_logo.webp" alt="logo floating"loading="lazy"/>
       </a>
     </span>
 
@@ -45,6 +45,7 @@
             class="img-sm"
             alt="logo RE"
             id="logo_intro"
+            loading="lazy"
           />
         </div>
         <div class="p-relative d-flex justify-content-center" id="hero">
@@ -53,13 +54,15 @@
             alt="main-logo-royal"
             class="img-hero"
             id="img_hero_1"
+            loading="lazy"
           />
-          <img src="assets/arroba-clara.webp" alt="arroba" class="img-sm" />
+          <img src="assets/arroba-clara.webp" alt="arroba" class="img-sm"loading="lazy" />
           <img
             src="assets/logotipo.webp"
             alt="logotipo-molly-burguers"
             class="img-hero"
             id="img_hero_2"
+            loading="lazy"
           />
         </div>
       </section>
@@ -75,6 +78,7 @@
               src="assets/logo-complete.webp"
               alt="logo-regeneration"
               class="img-75"
+              loading="lazy"
             />
             <p>
               The generation determined to learn from their roots and create
@@ -104,6 +108,7 @@
                <img
                  src="assets/join-us.webp"
                  alt="img join us"
+                 loading="lazy"
                  class="img-75 animate-heading"/>
             </a>
             <p class="animate-heading">
@@ -114,6 +119,7 @@
             <div class="d-flex img-container-25 border-circle border-md mx-auto animate-heading">
               <img
                 src="assets/Austin_kids.webp"
+                loading="lazy"
                 alt="img cowboys family"
                 class="img-responsive"
               />
@@ -140,6 +146,7 @@
           <img
             src="assets/molly-burgers.webp"
             alt="logo molly burguers"
+            loading="lazy"
             class="img-75 py-1 animate-heading"/>
           <h1
             class="title animate-heading">
@@ -157,6 +164,7 @@
               src="assets/1-person.webp"
               alt="img cowboys family"
               class="img-responsive"
+              loading="lazy"
             />
           </div>
         </div>
@@ -176,6 +184,7 @@
              src="assets/hamburgers/Hamburger-1.webp"
              alt="img hamburger-1"
              class="img-5 img_parallax"
+             loading="lazy"
            />
            <div class="title">BUN:</div>
            <p>
@@ -194,6 +203,7 @@
              src="assets/hamburgers/Hamburger-2.webp"
              alt="img hamburger-2"
              class="img-5"
+             loading="lazy"
            />
            <div class="title">PRODUCE:</div>
            <p>
@@ -214,6 +224,7 @@
              src="assets/hamburgers/Hamburger-3.webp"
              alt="img hamburger-3"
              class="img-5"
+             loading="lazy"
            />
            <div class="title">DAIRY:</div>
            <p>
@@ -232,6 +243,7 @@
              src="assets/hamburgers/Hamburger-4.webp"
              alt="img hamburger-4"
              class="img-5"
+             loading="lazy"
            />
            <div class="title">BEEF:</div>
            <p>
@@ -247,6 +259,7 @@
              src="assets/hamburgers/Hamburger-5.webp"
              alt="img hamburger-5"
              class="img-5"
+             loading="lazy"
            />
            <div class="title">
              CARBON NATURAL<br />
@@ -350,6 +363,7 @@
               src="assets/CPA_Blue_NWCityArenaLight_DronePhoto2022.webp"
               alt="img arena city"
               class="img-responsive"
+              loading="lazy"
             />
           </div>
         </div>
@@ -364,6 +378,7 @@
           <img
             src="assets/logo-complete.webp"
             alt="logo-regeneration"
+            loading="lazy"
             class="img-75 animate-heading"/>
           <h1
             class="title animate-heading">
@@ -374,6 +389,7 @@
               <img
                 src="assets/partner-darigold.webp"
                 alt="logo partner darigold"
+                loading="lazy"
                 class="img-responsive p-1"
               />
             </div>
@@ -383,6 +399,7 @@
                 src="assets/partner-CMIorchards.webp"
                 alt="logo partner CMIorchards"
                 class="img-responsive p-1"
+                loading="lazy"
               />
             </div>
 
@@ -391,6 +408,7 @@
                 src="assets/partner-macDonaldMeat.webp"
                 alt="logo partner macDonaldMeat"
                 class="img-responsive p-1"
+                loading="lazy"
               />
             </div>
 
@@ -399,6 +417,7 @@
                 src="assets/partner-UA.webp"
                 alt="logo partner UA"
                 class="img-responsive p-1"
+                loading="lazy"
               />
             </div>
 
@@ -407,6 +426,7 @@
                 src="assets/partner-BEEF.webp"
                 alt="logo partner BEEF"
                 class="img-responsive p-1"
+                loading="lazy"
               />
             </div>
 
@@ -414,6 +434,7 @@
               <img
                 src="assets/partner-DAIRY.webp"
                 alt="logo partner DAIRY"
+                loading="lazy"
                 class="img-responsive p-1"
               />
             </div>
@@ -422,6 +443,7 @@
               <img
                 src="assets/partner-honey.webp"
                 alt="logo partner HONEY"
+                loading="lazy"
                 class="img-responsive p-1"
               />
             </div>
@@ -430,6 +452,7 @@
               <img
                 src="assets/partner-nurst.webp"
                 alt="logo partner nurts"
+                loading="lazy"
                 class="img-responsive p-1"
               />
             </div>
@@ -461,22 +484,22 @@
             data-aos-duration="1000"
             data-aos-easing="ease-in-out-back"
           >
-            <img src="assets/follows/follow-4.webp" alt="img follow 4" class="img-100">
-            <img src="assets/follows/follow-9.webp" alt="img follow 9" class="img-100">
-            <img src="assets/follows/follow-5.webp" alt="img follow 5" class="img-100">
-            <img src="assets/follows/follow-10.webp" alt="img follow 10" class="img-100">
+            <img src="assets/follows/follow-4.webp" alt="img follow 4" class="img-100"loading="lazy">
+            <img src="assets/follows/follow-9.webp" alt="img follow 9" class="img-100"loading="lazy">
+            <img src="assets/follows/follow-5.webp" alt="img follow 5" class="img-100"loading="lazy">
+            <img src="assets/follows/follow-10.webp" alt="img follow 10" class="img-100"loading="lazy">
 
-            <img src="assets/follows/follow-11.webp" alt="img follow 11" class="img-100">
-            <img src="assets/follows/follow-12.webp" alt="img follow 12" class="img-100">
-            <img src="assets/follows/follow-15.webp" alt="img follow 15" class="img-100">
-            <img src="assets/follows/follow-14.webp" alt="img follow 14" class="img-100">
+            <img src="assets/follows/follow-11.webp" alt="img follow 11" class="img-100"loading="lazy">
+            <img src="assets/follows/follow-12.webp" alt="img follow 12" class="img-100"loading="lazy">
+            <img src="assets/follows/follow-15.webp" alt="img follow 15" class="img-100"loading="lazy">
+            <img src="assets/follows/follow-14.webp" alt="img follow 14" class="img-100"loading="lazy">
 
-            <img src="assets/follows/follow-22.webp" alt="img follow 22" class="img-100">
-            <img src="assets/follows/follow-17.webp" alt="img follow 17" class="img-100">
-            <img src="assets/follows/follow-21.webp" alt="img follow 21" class="img-100">
-            <img src="assets/follows/follow-18.webp" alt="img follow 18" class="img-100">
+            <img src="assets/follows/follow-22.webp" alt="img follow 22" class="img-100"loading="lazy">
+            <img src="assets/follows/follow-17.webp" alt="img follow 17" class="img-100"loading="lazy">
+            <img src="assets/follows/follow-21.webp" alt="img follow 21" class="img-100"loading="lazy">
+            <img src="assets/follows/follow-18.webp" alt="img follow 18" class="img-100"loading="lazy">
 
-            <img src="assets/follows/follow-20.webp" alt="img follow 20" class="img-100">
+            <img src="assets/follows/follow-20.webp" alt="img follow 20" class="img-100"loading="lazy">
           </div>
         </div>
       </section>
@@ -492,6 +515,7 @@
               src="assets/austin molly door.webp"
               alt="img austin molly hourse"
               class="img-responsive"
+              loading="lazy"
             />
           </div>
           <h1 class="title animate-heading">
@@ -510,6 +534,7 @@
           <img
             src="assets/main-logo.webp"
             alt="logo royal"
+            loading="lazy"
             class="img-3 border-circle border animate-heading"/>
           <br />
           <div class="animate-heading">
@@ -526,7 +551,7 @@
         </div>
       </section>
       <footer class="d-flex text-light">
-         <span class="mr-1">Website by <a href="https://www.dairyperformancenetwork.com/" target="_blank"><img alt="logo dpn" decoding="async" src="assets/logo_dpn.webp" style="width:50px"></a></span>
+         <span class="mr-1">Website by <a href="https://www.dairyperformancenetwork.com/" target="_blank"><img alt="logo dpn" decoding="async" src="assets/logo_dpn.webp" loading="lazy" style="width:50px"></a></span>
       </footer>
     </div>
 
